# sqlite-sync-core

./: .gitignore  COMMERCIAL_VALUE.md  CONTRIBUTING.md  LICENSE  README.md  a.bundle  advanced_sync_test.py  debug_engine_import.py  debug_fastapi.py  debug_import.py  debug_minimal_import.py  debug_server_import.py  debug_strategies.py  debug_test.py  debug_tests.py  functional_test.py  index.html  init.bundle  isolated_tests.py  minimal_test.py  node_a_l2.db-shm  node_a_l2.db-wal  node_b_l2.db-shm  node_b_l2.db-wal  pyproject.toml  results.txt  run_output.txt  run_output_2.txt  run_verification.py  simple_demo.py  single_test.py  sync_a_to_b.bundle  test_enterprise.py  test_layer2.py  test_log.txt  test_log_2.txt  test_log_3.txt  test_log_4.txt  test_log_5.txt  test_log_debug.txt  (+28 more)
.github/workflows/: ci.yml  publish.yml
docs/: API.md
examples/: basic_usage.py  desktop_demo.py  http_sync_demo.py  network_sync.py  real_world_sync.py
sqlite_sync_core-0.5.2/src/sqlite_sync/: hlc.py
sqlite_sync_core-0.5.2/src/sqlite_sync/db/: __init__.py
src/sqlite_sync/: __init__.py  config.py  crash_safety.py  engine.py  errors.py  invariants.py  log_compaction.py  metrics.py  node.py  scheduler.py  schema_evolution.py  security.py  sync_loop.py
src/sqlite_sync/audit/: __init__.py  import_log.py
src/sqlite_sync/bundle/: __init__.py  format.py  generate.py  validate.py
src/sqlite_sync/capture/: __init__.py  change_capture.py
src/sqlite_sync/cli/: __init__.py  main.py
src/sqlite_sync/db/: connection.py  migrations.py  schema.py  triggers.py
src/sqlite_sync/ext/: network_manager.py  node.py  sync_loop.py
src/sqlite_sync/ext/server/: __init__.py  http_server.py
src/sqlite_sync/import_apply/: __init__.py  apply.py  conflict.py  dedup.py  ordering.py
src/sqlite_sync/log/: __init__.py  operations.py  vector_clock.py
src/sqlite_sync/network/: client.py  peer_discovery.py  protocol.py  server.py
src/sqlite_sync/resolution/: __init__.py  lww_merge.py  strategies.py
src/sqlite_sync/server/: __init__.py  auth.py  http_server.py
src/sqlite_sync/transport/: __init__.py  base.py  http_transport.py  server.py  websocket_transport.py
src/sqlite_sync/utils/: __init__.py  hashing.py  msgpack_codec.py  uuid7.py
tests/: __init__.py  conftest.py  test_conflicts.py  test_determinism.py  test_idempotency.py  test_invariants.py  test_productization.py  test_transport.py
